@@ -20,3 +20,4 @@
 17. cpufreq: added Governor (Badass).
 18. Added Fast Charge.
 19. Added Frandom Support.
+20. Added Governor (msm-adreno-tz).
